# gn-example

./: .gitignore  .gn  BUILD.gn  DEPS  README.md  vs_toolchain.py
base/: BUILD.gn  atomicops.h  bit_cast.h  build_config.h  compiler_specific.h  logging.h  rand_util.cc  template_util.h
base/debug/: alias.cc
base/files/: file_path.h  file_util.h
base/posix/: eintr_wrapper.h
base/strings/: string16.h  sys_string_conversions.h
base/synchronization/: condition_variable.h  lock.h  lock_impl.h
base/threading/: thread_local_storage.h
test/: BUILD.gn
tutorial/: BUILD.gn  gtk.cc  hello.cc  say_hello.cc
