# Copyright (c) 2013 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
# This is the root build file for GN. GN will start processing by loading this
# file, and recursively load all dependencies until all dependencies are either
# resolved or known not to exist (which will cause the build to fail). So if
# you add a new build file, there must be some path of dependencies from this
# file to your new one or GN won't know about it.
import("//build/config/compiler/compiler.gni")
import("//build/config/features.gni")
import("//build/config/sanitizers/sanitizers.gni")
import("//build/config/ui.gni")
# import("//components/nacl/features.gni")
# import("//device/vr/buildflags/buildflags.gni")
# import("//extensions/buildflags/buildflags.gni")
# import("//media/media_options.gni")
# import("//media/gpu/args.gni")
# import("//remoting/remoting_enable.gni")
# import("//third_party/openh264/openh264_args.gni")
# import("//tools/ipc_fuzzer/ipc_fuzzer.gni")
# import("//ui/base/ui_features.gni")
# import("//ui/webui/webui_features.gni")
# import("//ui/ozone/ozone.gni")
# import("//v8/gni/v8.gni")
# import("//v8/snapshot_toolchain.gni")

if (is_android) {
  import("//build/config/android/config.gni")
}

declare_args() {
  # A list of extra dependencies to add to the root target. This allows a
  # checkout to add additional targets without explicitly changing any checked-
  # in files.
  root_extra_deps = []
}

if (is_official_build) {
  # An official (maximally optimized!) component (optimized for build times)
  # build doesn't make sense and usually doesn't work.
  assert(!is_component_build)
}

group("gn_all") {
  deps = [
    "//base",
  ]
}
