import("//build/buildflag_header.gni")
import("//build/config/allocator.gni")
import("//build/config/arm.gni")
import("//build/config/chromecast_build.gni")
import("//build/config/clang/clang.gni")
import("//build/config/compiler/compiler.gni")
import("//build/config/dcheck_always_on.gni")
import("//build/config/jumbo.gni")
import("//build/config/nacl/config.gni")
import("//build/config/sysroot.gni")
import("//build/config/ui.gni")
# import("//build/nocompile.gni")
# import("//testing/libfuzzer/fuzzer_test.gni")
# import("//testing/test.gni")

group("test") {
  deps = [
    ":test1",
  ]
}

executable("test1") {
  sources = [
    "test1.cc",
  ]
}
