import("//build/config/linux/pkg_config.gni")

pkg_config("libgtk") {
  packages = [ "gtk+-2.0" ] 
}

executable("hello_world") {
  sources = [
    "hello_world.cc",
  ]
}

executable("gtk") {
  sources = [
    "gtk.cc",
  ]

  configs += [ ":libgtk" ]

  deps = [
    "//base:base",
  ]
}

config("myconfig") {
  include_dirs = [
    "..",
  ]
}

config("hello_config") {
  defines = [
    "TWO_PEOPLE",
  ]
}

static_library("hello") {
  sources = [
    "hello.cc",
  ]

  all_dependent_configs = [
    ":hello_config",
    ":myconfig",
  ]
}

executable("say_hello") {
  sources = [
    "say_hello.cc",
  ]

  configs += [
    ":myconfig",
  ]

  deps = [
    ":hello",
  ]
}
